# indicator-xkbmod

./: .gitignore  .travis.yml  AUTHORS  README.md  configure.ac  indicator-xkbmod.c
data/: Makefile.am  gnome-indicator-xkbmod.desktop  indicator-xkbmod.desktop
data/man/: indicator-xkbmod.1
debian/: README  changelog  control  copyright  files  rules
src/: Makefile.am  indicator-xkbmod.c
